--- a/index.html
+++ b/index.html
@@ -7,71 +7,87 @@
 
   <body>
     <div class="tabs">
-      <div class="tabs__tablist" role="tablist" aria-label="Entertainment">
-        <button
-          aria-controls="nils-tab"
-          aria-selected="true"
-          class="tabs__tab"
-          id="nils"
-          role="tab"
-        >
-          Nils Frahm
-        </button>
-        <button
-          aria-controls="agnes-tab"
-          aria-selected="false"
-          class="tabs__tab"
-          id="agnes"
-          role="tab"
-        >
-          Agnes Obel
-        </button>
-        <button
-          aria-controls="complexcomplex"
-          aria-selected="false"
-          class="tabs__tab"
-          id="complex"
-          role="tab"
-        >
-          Joke
-        </button>
-      </div>
-      <div tabindex="0" role="tabpanel" id="nils-tab" aria-labelledby="nils">
-        <p>
-          Nils Frahm is a German musician, composer and record producer based in
-          Berlin. He is known for combining classical and electronic music and
-          for an unconventional approach to the piano in which he mixes a grand
-          piano, upright piano, Roland Juno-60, Rhodes piano, drum machine, and
-          Moog Taurus.
-        </p>
+      <div class="tabs__timers-wrapper">
+        <div class="tabs__timerlist" role="tablist">
+          <div class="tabs__timer"></div>
+          <div class="tabs__timer"></div>
+          <div class="tabs__timer"></div>
+        </div>
+        <div aria-label="Entertainment" class="tabs__tablist" role="tablist">
+          <button
+            aria-controls="nils-tab"
+            aria-selected="true"
+            class="tabs__tab"
+            id="nils"
+            role="tab"
+          >
+            <span>Nils Frahm</span>
+            <span>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt.
+            </span>
+          </button>
+          <button
+            aria-controls="agnes-tab"
+            aria-selected="false"
+            class="tabs__tab"
+            id="agnes"
+            role="tab"
+          >
+            <span>Agnes Obel</span>
+            <span>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt.
+            </span>
+          </button>
+          <button
+            aria-controls="complexcomplex"
+            aria-selected="false"
+            class="tabs__tab"
+            id="complex"
+            role="tab"
+          >
+            <span>Joke</span>
+            <span>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt.
+            </span>
+          </button>
+        </div>
       </div>
       <div
-        tabindex="0"
+        aria-labelledby="nils"
+        class="tabs__panel"
+        id="nils-tab"
         role="tabpanel"
-        id="agnes-tab"
-        aria-labelledby="agnes"
-        hidden=""
+        tabindex="0"
       >
-        <p>
-          Agnes Caroline Thaarup Obel is a Danish singer/songwriter. Her first
-          album, Philharmonics, was released by PIAS Recordings on 4 October
-          2010 in Europe. Philharmonics was certified gold in June 2011 by the
-          Belgian Entertainment Association (BEA) for sales of 10,000 Copies.
-        </p>
+        <img style="width: 100%;" src="https://picsum.photos/900/500" alt="" />
       </div>
       <div
-        tabindex="0"
+        aria-labelledby="agnes"
+        class="tabs__panel"
+        id="agnes-tab"
+        hidden=""
         role="tabpanel"
+        tabindex="0"
+      >
+        <img style="width: 100%;" src="https://picsum.photos/900/500" alt="" />
+      </div>
+      <div
         id="complexcomplex"
         aria-labelledby="complex"
+        class="tabs__panel"
         hidden=""
+        role="tabpanel"
+        tabindex="0"
       >
-        <p>
-          Fear of complicated buildings:
-        </p>
-        <p>
-          A complex complex complex.
-        </p>
+        <img style="width: 100%;" src="https://picsum.photos/900/500" alt="" />
       </div>
     </div>
 
