--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <body>
     <div class="tabs">
       <div class="tabs__timers-wrapper">
-        <div class="tabs__timerlist" role="tablist">
-          <div class="tabs__timer"></div>
-          <div class="tabs__timer"></div>
-          <div class="tabs__timer"></div>
-        </div>
         <div aria-label="Entertainment" class="tabs__tablist" role="tablist">
+          <div class="tabs__timer"></div>
           <button
             aria-controls="nils-tab"
             aria-selected="true"
@@ -28,6 +24,8 @@
               rerum id ad sunt.
             </span>
           </button>
+
+          <div class="tabs__timer"></div>
           <button
             aria-controls="agnes-tab"
             aria-selected="false"
@@ -39,11 +37,13 @@
             <span>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
               repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
-              rerum id ad sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
-              rerum id ad sunt.
+              rerum id ad sunt. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Sint repellendus dolor sequi, culpa at delectus
+              ex ut praesentium vitae rerum id ad sunt.
             </span>
           </button>
+
+          <div class="tabs__timer"></div>
           <button
             aria-controls="complexcomplex"
             aria-selected="false"
