--- a/index.html
+++ b/index.html
@@ -7,59 +7,6 @@
 
   <body>
     <div class="tabs">
-      <div class="tabs__timers-wrapper">
-        <div aria-label="Entertainment" class="tabs__tablist" role="tablist">
-          <div class="tabs__timer"></div>
-          <button
-            aria-controls="nils-tab"
-            aria-selected="true"
-            class="tabs__tab"
-            id="nils"
-            role="tab"
-          >
-            <span>Nils Frahm</span>
-            <span>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
-              rerum id ad sunt.
-            </span>
-          </button>
-
-          <div class="tabs__timer"></div>
-          <button
-            aria-controls="agnes-tab"
-            aria-selected="false"
-            class="tabs__tab"
-            id="agnes"
-            role="tab"
-          >
-            <span>Agnes Obel</span>
-            <span>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
-              rerum id ad sunt. Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Sint repellendus dolor sequi, culpa at delectus
-              ex ut praesentium vitae rerum id ad sunt.
-            </span>
-          </button>
-
-          <div class="tabs__timer"></div>
-          <button
-            aria-controls="complexcomplex"
-            aria-selected="false"
-            class="tabs__tab"
-            id="complex"
-            role="tab"
-          >
-            <span>Joke</span>
-            <span>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
-              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
-              rerum id ad sunt.
-            </span>
-          </button>
-        </div>
-      </div>
       <div
         aria-labelledby="nils"
         class="tabs__panel"
@@ -88,6 +35,59 @@
         tabindex="0"
       >
         <img style="width: 100%;" src="https://picsum.photos/900/500" alt="" />
+      </div>
+      <div class="tabs__timers-wrapper">
+        <div class="tabs__timerlist" role="tablist">
+          <div class="tabs__timer"></div>
+          <div class="tabs__timer"></div>
+          <div class="tabs__timer"></div>
+        </div>
+        <div aria-label="Entertainment" class="tabs__tablist" role="tablist">
+          <button
+            aria-controls="nils-tab"
+            aria-selected="true"
+            class="tabs__tab"
+            id="nils"
+            role="tab"
+          >
+            <span class="tabs__tab__title">Nils Frahm</span>
+            <span class="tabs__tab__subtitle">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt.
+            </span>
+          </button>
+          <button
+            aria-controls="agnes-tab"
+            aria-selected="false"
+            class="tabs__tab"
+            id="agnes"
+            role="tab"
+          >
+            <span class="tabs__tab__title">Agnes Obel</span>
+            <span class="tabs__tab__subtitle">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Sint repellendus dolor sequi, culpa at delectus
+              ex ut praesentium vitae rerum id ad sunt.
+            </span>
+          </button>
+          <button
+            aria-controls="complexcomplex"
+            aria-selected="false"
+            class="tabs__tab"
+            id="complex"
+            role="tab"
+          >
+            <span class="tabs__tab__title">Joke</span>
+            <span class="tabs__tab__subtitle">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint
+              repellendus dolor sequi, culpa at delectus ex ut praesentium vitae
+              rerum id ad sunt.
+            </span>
+          </button>
+        </div>
       </div>
     </div>
 
